Add genotype info and file downloads

--- a/public/index.html
+++ b/public/index.html
@@ -61,8 +61,12 @@
         <p class="meta"></p>
         <dl class="details">
           <div>
-            <dt>데이터 수</dt>
+            <dt>개체 수</dt>
             <dd class="count">-</dd>
+          </div>
+          <div class="genotype-info" hidden>
+            <dt>Genotype 정보(Gb)</dt>
+            <dd class="genotype-size">-</dd>
           </div>
           <div>
             <dt>데이터 타입</dt>
@@ -71,6 +75,10 @@
           <div>
             <dt>저장 위치</dt>
             <dd class="storage"></dd>
+          </div>
+          <div>
+            <dt>파일 다운로드</dt>
+            <dd class="download"></dd>
           </div>
           <div>
             <dt>생성 시각</dt>
