Show storage folder instead of download

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
             <div class="filter-group crops">
               <label><input type="checkbox" value="tomato" checked /> 🍅 토마토</label>
               <label><input type="checkbox" value="cabbage" checked /> 🥬 양배추</label>
+              <label><input type="checkbox" value="pepper" checked /> 🌶️ 고추</label>
             </div>
           </section>
 
@@ -61,8 +62,12 @@
         <p class="meta"></p>
         <dl class="details">
           <div>
-            <dt>데이터 수</dt>
+            <dt>개체 수</dt>
             <dd class="count">-</dd>
+          </div>
+          <div class="genotype-info" hidden>
+            <dt>Genotype 정보(Gb)</dt>
+            <dd class="genotype-size">-</dd>
           </div>
           <div>
             <dt>데이터 타입</dt>
@@ -71,6 +76,10 @@
           <div>
             <dt>저장 위치</dt>
             <dd class="storage"></dd>
+          </div>
+          <div>
+            <dt>폴더 보기</dt>
+            <dd class="download"></dd>
           </div>
           <div>
             <dt>생성 시각</dt>
