Add phenotype count to dataset cards

--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,10 @@
             <dt>Genotype 정보(Gb)</dt>
             <dd class="genotype-size">-</dd>
           </div>
+          <div class="phenotype-info" hidden>
+            <dt>Phenotype 수</dt>
+            <dd class="phenotype-count">-</dd>
+          </div>
           <div>
             <dt>데이터 타입</dt>
             <dd class="datatype">-</dd>
